Added Table tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
 
   <body>
     <h1>Excerpts From Select Public Domain Books</h1>
-    
+
+    <table>
+
+      <tr>
+        <td><strong>Book Title</strong></td>
+        <td><strong>Book Author</strong></td>
+      </tr>
+
+      <tr>
+        <td><em>Alice Adventures in Wonderland</em></td>
+        <td>Lewis Carrol</td>
+      </tr>
+
+      <tr>
+        <td><em>Peter Pan</em></td>
+        <td>J.M. Barrie</td>
+      </tr>
+
+      <tr>
+        <td><em>The Wonderful Wizard of Oz</em></td>
+        <td>L. Frank Baum</td>
+      </tr>
+      
+    </table>
+
   </body>
 </html>
