--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
       but the sun blistered the paint and the rains washed it away, and now the house was as dull and gray as everything else.
     </p>
 
+    <p><strong>Text exerpts from:</strong><a href="#">Project Gutenberg</a></p>
+
   </body>
 </html>
