--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
       but the sun blistered the paint and the rains washed it away, and now the house was as dull and gray as everything else.
     </p>
 
-    <p><strong>Text exerpts from:</strong><a href="#">Project Gutenberg</a></p>
+    <p><strong>Text exerpts from:<a href="http://www.gutenberg.org">Project Gutenberg</a></strong></p>
+
+    <ul>
+      <li>Gladys Toledo-Rodriguez</li>
+      <li>ITMD-361</li>
+      <li>Lab 3</li>
+    </ul>
 
   </body>
 </html>
